--- a/src/style.css
+++ b/src/style.css
@@ -53,37 +53,49 @@ body {
     align-items: center;
   }
   
-  /* 시계 스타일 */
   #clock {
     font-family: 'Pretendard-SemiBold';
-    font-size: 15px;
+    font-size: 13px;
     text-align: center;
     line-height: 1.5em;
     margin-top: 5px;
   }
   
-
   .container {
      display: flex; 
      justify-content: center; 
      align-items: center; 
-     margin-bottom: 40px;
+     margin-bottom: 5px;
+     background-color: #e0e0e0;
+     border-radius: 10px;
+     padding: 3px;
+     height: 10%;
+     box-sizing: border-box;
+     border: 0.5px solid #736e6e;
   }
   
   #inputField {
-     width: 160px; 
-     padding: 5px;  
+     width: 90%; 
+     padding: 3px;  
      border: none;
-     border-bottom: 2px solid #141414;
+     border-bottom: 1px solid #555252;
+     background-color: transparent;
+     color: #555252;
      font-family: 'Pretendard-Regular';
+     margin-left: 3px;
+     box-sizing: border-box;
   }
+
+  input:focus {
+    outline-style: none;
+}
     
   #addButton {   
     margin-top: 3px;
-    width: 30px;   
+    width: 20px;   
     height: 30px;   
     background-color: transparent;
-    color:black;
+    color:#555252;
     border: none;
     border-radius: 50%;
     cursor: pointer;
@@ -91,50 +103,114 @@ body {
   
   .todoList{
     display: flex;
-    border: 2px solid navy;
-    flex-direction: column;
     align-items: center;
-    width: 50vh;
-    height: 50vh;
-    padding: 20px;
-    }
+    width: 60vh;
+    height: 65vh;
+    padding: 10px;
+    justify-content: space-between;
+    background-color: #f3f3f3;
+    box-sizing: border-box;
+    border-radius: 10px;
+  }
   
   .sub_title{
-    font-size: 18px; 
+    display: flex; 
+    font-size: 13px; 
     font-family: 'Pretendard-SemiBold';
+    width: 100%;
+    height: 10%;
+    align-items: center;
+    padding-left: 10px;
+    background-color: #e0e0e0;
+    border-radius: 10px 10px 0px 0px;
+    box-sizing: border-box;
   } 
 
+  .first, .second{
+    width: 49%;
+    height: 100%;
+    box-sizing: border-box;
+  }
+
   .todos{
-    width: 90%;
-    height: 50%;
+    width: 100%;
+    height: 90%;
+    border: 0.5px solid #736e6e;
+    border-radius: 10px;
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  .daily{
+    display: flex; 
+    width: 100%;
+    height: 10%;
+    background-color: #e0e0e0;
+    color: #302e2e;
+    border: 0.5px solid #736e6e;
+    margin-bottom: 5px;
+    border-radius: 10px;
+    align-items: center;
+    justify-content: center;
+    padding: 3px;
+    box-sizing: border-box;
+    text-align: center;
+    font-family: "Pretendard-SemiBold";
+    letter-spacing: 1px;
+    font-size: 13px;
   }
 
   .dones{
-    width: 90%;
-    height: 50%;
-    color: #858687;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 90%;
+    color: #6d6d6d;
+    border: 0.5px solid #736e6e;
+    box-sizing: border-box;
+    border-radius: 10px;
   }
 
   .lists{
     overflow: auto;
-    height: 70%;
+    height: 80%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    scrollbar-width: none;
+    box-sizing: border-box;
+  }
+
+  .lists::-webkit-scrollbar {
+    display: none;
   }
   
   ul{
     list-style-type: none;
+    padding-inline-start: 5px;
+    box-sizing: border-box;
   }
 
   h1{
     font-family: 'Pretendard-Regular';
     font-size: 25px;
-    margin-bottom: 70px;
+    margin-bottom: 20px;
+    line-height: 150%;
+    letter-spacing: 2px;
   }
   
   .todo-list{
-    display: flex;  
-    align-items: center;    
+    display: flex;
+    justify-content: space-between;   
     margin-bottom: 5px;
-    font-size: 15px;
+    width: 88%;
+    box-sizing: border-box;
+    cursor: pointer;
+    font-family: 'Pretendard-Regular';
+    font-size: 13px;
   }
   
   .todo-delete{
@@ -143,7 +219,6 @@ body {
   }
 
   .todo-check{
-    cursor: pointer;
     margin-right: 5px;
   }
   
